--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -21,6 +21,25 @@
   <%= @vehicle.customer.name %>
 </p>
 
+<p>
+  <%= strongify('Precio:')%>
+  <%= @vehicle.price %>
+</p>
+
+<p>
+  <%= strongify('Cantidad de kilometros:')%>
+  <%= @vehicle.kilimeters_covered %>
+</p>
+
+<p>
+  <%= strongify('tipo de combustible:')%>
+  <%= @vehicle.fuel_type %>
+</p>
+
+<p>
+  <%= strongify('Año:')%>
+  <%= @vehicle.year %>
+</p>
 
 <%= link_to 'Edit', edit_vehicle_path(@vehicle) %> |
 <%= link_to 'Back', vehicles_path %>
