--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Listing brands</h1>
+<center><h1>Marcas</h1></center>
 
-<table>
+<table class="table table-hover table striped">
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
     <th></th>
     <th></th>
   </tr>
 
 <% @brands.each do |brand| %>
-  <tr>
+  <tr class="success">
     <td><%= link_to brand.name, brand %>(<%= brand.total_vehicles %>)</td>
     <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
     <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -18,4 +18,4 @@
 
 <br />
 
-<%= link_to 'New Brand', new_brand_path %>
+<%= link_to icon('plus')+'Nueva Marca', new_brand_path, class: 'btn btn-succes' %>
