--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,17 +1,18 @@
-<h1>Listing customers</h1>
+<center><h1>Clientes</h1></center>
 
-<table>
+<table class="table table-hover table striped">
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
     <th>Email</th>
-    <th>Phone</th>
+    <th>Telefono</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
 
 <% @customers.each do |customer| %>
-  <tr>
+
+  <tr class="success">
     <td><%= customer.name %></td>
     <td><%= customer.email %></td>
     <td><%= customer.phone %></td>
@@ -24,4 +25,5 @@
 
 <br />
 
-<%= link_to 'New Customer', new_customer_path %>
+<%= link_to icon('plus')+'Nuevo Cliente', new_customer_path, class: 'btn btn-succes' %>
+
