--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,60 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <div class="container">
    <div id="header">
-      <h1>Concesionaria</h1>
-    </div>
-     <div class="row">
-      <div id="menu" class="span2">
-        <ul>
-        <li><%= link_to strongify('Inicio'),root_url %></li>
+      <div class="row-fluid">
+            <div class="span4">
+              <%= image_tag('logo.jpg')  %>
+            </div><!--/span-->
+            <div class="span4">
+              <center> <h1>Concesionaria</h1></center> 
+            </div><!--/span-->
+            <div class="span4">
+               <%= image_tag('logo.jpg')  %>
+            </div><!--/span-->
+          </div>
+
+     
+
+<div class="tabbable tabs-left">
+  <ul class="nav nav-tabs">
+    
+<ul>
+        <li><%= link_to strongify('Inicio'),inicio_path %></li>
+
         <li><%= link_to 'Marcas', brands_path %></li>
         <li><%= link_to 'Clientes',customers_path %></li>
         <li><%= link_to 'Tipo de vehiculo',vehicle_types_url %></li>
+        <li><%= link_to 'Vehiculo',vehicles_url %></li>
        </ul>
-    </div>
-    <div id="content" class="span10">
-   <%= yield %>
-    </div>
+
+  </ul>
+  <div class="tab-content">
+
+    <%= yield %>
+
   </div>
+</div>
+
+
+
   <div id="footer">
   &copy; <%= Time.now.year %> - Concesionaria
   </div>
