--- a/app/views/vehicle_types/index.html.erb
+++ b/app/views/vehicle_types/index.html.erb
@@ -1,15 +1,15 @@
-<h1>Listing vehicle_types</h1>
+<center><h1>Tipos de vehiculos</h1></center>
 
-<table>
+<table class="table table-hover table striped">
   <tr>
-    <th>Name</th>
+    <th>Nombre</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
 
 <% @vehicle_types.each do |vehicle_type| %>
-  <tr>
+  <tr class="success">
     <td><%= vehicle_type.name %></td>
     <td><%= link_to 'Show', vehicle_type %></td>
     <td><%= link_to 'Edit', edit_vehicle_type_path(vehicle_type) %></td>
@@ -20,4 +20,4 @@
 
 <br />
 
-<%= link_to 'New Vehicle type', new_vehicle_type_path %>
+<%= link_to icon('plus')+'Nuevo tipo de vehiculo', new_vehicle_type_path ,class: 'btn btn-success' %>
