--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,25 +1,31 @@
-<h1>Listing vehicles</h1>
+<center><h1>Vehiculos</h1></center>
 
 <table class="table table-hover table striped">
   <thead>
   <tr>
-    <th>Name</th>
-    <th>Brand</th>
-    <th>Vehicle type</th>
-    <th>Customer</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Nombre</th>
+    <th>Marca</th>
+    <th>Vehiculo</th>
+    <th>Cliente</th>
+    <th>Precio</th>
+    <th>Kilometros</th>
+    <th>Combustible</th>
+    <th>Año</th>
   </tr>
 </thead>
 
 <tbody>
 <% @vehicles.each do |vehicle| %>
-  <tr class="vehicle<%#= cycle :succes, :error, :warning, :info%>">
+<tr class="success">
+  <%#<tr class="vehicle<%#= cycle :succes, :error, :warning, :info%>
     <td><%= vehicle.name%></td>
     <td><%= vehicle.brand.name%></td>
     <td><%= vehicle.vehicle_type.name%></td>
     <td><%= vehicle.customer.name %></td>
+    <td><%= vehicle.price%></td>
+    <td><%= vehicle.kilimeters_covered%></td>
+    <td><%= vehicle.fuel_type%></td>
+    <td><%= vehicle.year%></td>
     <td><%= link_to 'Show', vehicle %></td>
     <td><%= link_to 'Edit', edit_vehicle_path(vehicle) %></td>
     <td><%= link_to 'Destroy', vehicle, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +36,4 @@
 
 <br />
 
-<%= link_to icon('plus')+'New Vehicle', new_vehicle_path, class: 'btn btn-success' %>
+<%= link_to icon('plus')+'Nuevo Vehiculo', new_vehicle_path, class: 'btn btn-success' %>
